# BP2

./: CMakeLists.txt  LICENCE.md  README.md
apps/: CMakeLists.txt
apps/Polynomials/: ActionDeltaPlot.cpp  ActionDeltaPlot.py  CMakeLists.txt  Polynomials.cpp  Polynomials.hpp  StandardMultiField.cpp  actiondelta_gridpoints.sh  compare_to_ct.sh  ct_potential.py
apps/TestApp/: CMakeLists.txt  TestApp.cpp
cmake/: FindCASADI.cmake  Findgnuplot-iostream.cmake
include/: CasadiBounceSolver.hpp
include/BubbleProfiler2/: BouncePath.hpp  CasadiBounceSolver.hpp  CasadiFindMinimum.hpp
src/: BouncePath.cpp  CMakeLists.txt  CasadiBounceSolver.cpp
